# bank_propencity

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
configs/: pipeline.yaml
mlruns/.trash/641333269491302204/: meta.yaml
mlruns/902084844026970899/: meta.yaml
mlruns/902084844026970899/00111777d5654e9abd4f4a7df38e2ec9/: meta.yaml
mlruns/902084844026970899/05bb31da9c5b400bbeb7bb5712640361/: meta.yaml
mlruns/902084844026970899/27f7a51acf0f44399718001c15c1d090/: meta.yaml
mlruns/902084844026970899/288bed7f103c4ca383515413afe66fec/: meta.yaml
mlruns/902084844026970899/2a4338e10c8c4f0f9f38c37fb9aa84e1/: meta.yaml
mlruns/902084844026970899/2dee6e3fd2ae453d86360865969d676c/: meta.yaml
mlruns/902084844026970899/3194c4f00083441dafb41da53f36eb22/: meta.yaml
mlruns/902084844026970899/36c93f8094ab4c308ddbd4439735ee00/: meta.yaml
mlruns/902084844026970899/45cc493383b74c028c4743bd5e3da331/: meta.yaml
mlruns/902084844026970899/4901aae427b74be784ac6335688fd7b2/: meta.yaml
mlruns/902084844026970899/56c7989cd2a549628dcfd7de0d1ed0d0/: meta.yaml
mlruns/902084844026970899/57c6f5d7543e43c2a19191b51c1f07cf/: meta.yaml
mlruns/902084844026970899/6032b4068a4a45839479869485e0123c/: meta.yaml
mlruns/902084844026970899/672c9f19ec2f4d4e8b7aaead5f303623/: meta.yaml
mlruns/902084844026970899/738973738df94c009f3ec64774f702f8/: meta.yaml
mlruns/902084844026970899/7ea36481d55b4066b5df7858b751375d/: meta.yaml
src/: config.py  logger.py  train.py
tests/: conftest.py  test_data.py  test_pipeline.py
(+1953 files in other folders)
