[project]
name = "bank-propencity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0,<2.3.0",
    "numpy>=1.24,<2.0.0",
    "scikit-learn>=1.3,<1.6.0",
    "lightgbm>=4.0,<5.0.0",
    "optuna>=3.0,<4.0.0",
    "mlflow==2.8.0",
    "pydantic>=2.0,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    "structlog>=23.0,<25.0.0",
    "shap>=0.45,<1.0.0",
    "pytest>=7.0,<8.0.0",
    "pytest-cov>=4.0,<6.0.0",
    "imbalanced-learn>=0.14.1",
    "pycaret>=3.3.2",
    "ruff>=0.15.15",
    "black>=26.5.1",
    "mypy>=2.1.0",
]
